# stl

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitmodules  2026-05-27-maple-indexer-pr1-onchain-impl-log.md  AGENT.md  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  CORE_MODEL_INTEGRATION_v2.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  PRODUCT.md  README.md  Skillfile  TERRAFORM_DIAGRAM_README.md  VEC-277-root-cause-findings.md  docker-compose.yml  gen.err  gen.sql  generate-diagram.sh  go.mod  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  ponder.config.ts  ponder.schema.ts  preflight.sh  protocol_asset_registry.md  review-architect.md  review-security.md  (+7 more)
stl-verify/python/: .env.default  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  lefthook.yml  pyproject.toml
stl-verify/python/app/: config.py  logging.py  main.py  telemetry.py
stl-verify/python/app/api/: _share_errors.py  _validators.py  deps.py  time_series.py
stl-verify/python/app/domain/: exceptions.py  proxy_kind.py  risk_protocols.py  serialization.py  time_series.py
stl-verify/python/app/middleware/: request_id.py
stl-verify/python/app/ports/: allocation_repository.py  allocation_share_port.py  backed_breakdown_repository.py  backed_breakdown_repository_resolver.py  capital_metrics_history_repository.py  core_model_data_reader.py  core_model_results_reader.py  crypto_lending_reader.py  liquidation_params_repository.py  morpho_repository.py  orderbook_repository.py  position_repository.py  prime_debt_repository.py  protocol_event_repository.py  protocol_metadata_repository.py  psm3_repository.py  receipt_token_lookup.py  risk_model.py  risk_position_resolver.py  token_catalog_repository.py  token_price_repository.py
stl-verify/python/app/repositories/: position_repository.py
stl-verify/python/app/risk_engine/: entities.py  gap_sweep.py  lif.py  mapping.py  rrc.py
stl-verify/python/app/services/: allocation_category_config.py  allocation_category_service.py  allocation_service.py  backed_breakdown_repository_resolver.py  backed_breakdown_service.py  capital_metrics_history_service.py  capital_metrics_service.py  core_model_risk_service.py  crypto_lending_risk_service.py  data_provenance_service.py  gap_sweep_risk_model.py  liquidation_params_repository_resolver.py  model_registry.py  orderbook_service.py  position_service.py  prime_debt_service.py  prime_risk_capital_service.py  protocol_event_service.py  psm3_service.py  risk_calculation_service.py  risk_service_factory.py  suraf_rrc_service.py  token_catalog_service.py  units_formatter.py
stl-verify/python/scripts/: crosscheck_sparkusdtbc.py  export_openapi_schema.py
stl-verify/python/suraf/mappings/: asset_to_rating.json
stl-verify/python/tests/: clients.py  conftest.py  db.py  factories.py  seeds.py
stl-verify/python/tests/integration/: conftest.py  db_utils.py  seed.py  test_allocation_api.py  test_allocation_repository.py  test_backed_breakdown_repository.py  test_backed_breakdown_repository_morpho.py  test_core_model_results_reader.py  test_ghost_balance_fix.py  test_morpho_liquidation_params_repository.py  test_position_repository.py  test_psm3_api.py  test_receipt_token_repository.py  test_receipt_token_repository_via_wrap_engine.py  test_repo_demo_via_wrap_engine.py  test_risk_api.py  test_risk_position_resolver.py  test_rrc_api.py  test_sparklend_liquidation_params_repository.py  test_suraf_startup.py  test_time_series_default_window_api.py  test_token_api.py  test_token_catalog_repository.py  test_token_price_repository.py  test_wrap_engine.py
stl-verify/python/tests/unit/: conftest.py  (+52 more)
(+2341 files in other folders)
