[project]
name = "stl-verify-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "httpx>=0.28.1",
    "axis-synome==0.1.dev188",
    "opentelemetry-sdk>=1.41.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.62b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b0,<1",
    "opentelemetry-exporter-otlp>=1.41.0,<2",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "numpy",
    "arch>=8.0.0",
    "statsmodels>=0.14.6",
    "scipy>=1.17.1",
    "joblib>=1.5.3",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "ty==0.0.35",
    "testcontainers[postgres]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.src]
include = ["app", "tests", "scripts"]
exclude = [".venv", "**/__pycache__", "app/static"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
