[project]
name = "stl-verify-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "httpx>=0.28.1",
    "axis-synome==0.1.0.dev73",
    "opentelemetry-sdk>=1.41.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.62b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b0,<1",
    "opentelemetry-exporter-otlp>=1.41.0,<2",
    "pandas>=2.2.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "ty==0.0.35",
    "testcontainers[postgres]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.src]
include = ["app", "tests", "scripts"]
exclude = [".venv", "**/__pycache__", "app/static"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
